# ispider

./: .gitignore  .heartbeat  README.md  UPDATE_PIP.md  ispider_results.db  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  python-publish.yml
ispider_core/: 00_x.py  __init__.py  __main__.py  api_server.py  ispider.py  orchestrator.py  settings.py
ispider_core/crawlers/: cls_controllers.py  cls_domain_stats.py  cls_queue_out.py  http_client.py  http_retries.py  stage1.py  stage_crawl.py  stage_crawl_helpers.py  stage_spider.py  stage_unified.py  stage_unified_helpers.py  thread_queue_in.py  thread_save_finished.py  thread_stats.py
ispider_core/engines/: mod_httpx.py
ispider_core/seo/: __init__.py  base.py  runner.py
ispider_core/seo/checks/: __init__.py  content_quality.py  headings.py  http_status.py  technical.py
ispider_core/utils/: controllers.py  domains.py  efiles.py  ifiles.py  logger.py  menu.py  resume.py
static/: exclude_domains.csv
tests/: test_import.py  test_run.py  test_seo_checks.py  test_unified.py
