[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ispider_core"
version = "0.1.0"
description = "A high-speed web spider for extracting emails and social links."
authors = [{ name = "Daniele Rugginenti", email = "daniele.rugginenti@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "lxml",
    "tqdm",
    "requests",
    "httpx",
    "nslookup",
    "tldextract",
    "concurrent_log_handler",
    "colorlog"
]

[project.scripts]
ispider = "ispider_core.__main__:main"  # CLI command

[tool.setuptools]
packages = ["ispider_core"]
